--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<ul>
 				<li><a href="#intro" class="active">Introduction</a></li>
 				<li><a href="#first">Classes</a></li>
-				<li><a href="#second">Schools</a></li>
+				<!--li><a href="#second">Schools</a></li-->
 				<li><a href="#cta">Accreditation</a></li>
 			</ul>
 		</nav>
@@ -49,30 +49,30 @@
 						<header class="major">
 							<h2>Possibility Yoga</h2>
 						</header>
-						<p class="content">Karen is a senior practitioner who has trained with Jyoti Emmanuel from
-							Special Yoga, completing Level 1 , Level 2 and the Adults with Special needs courses.
-							Karen currently mentors on the Foundation course run by special yoga. Karen also shares
-							special yoga with children and young adults with different disabilities and additional needs
-							including PMLD, ASD & Down syndrome, in schools, the home and in the community.
-						<blockquote>
-							“Working from my heart and sharing my love of the special yoga practices is very important
+						<p class="content">
+						<p>Welcome to PossibilityYoga. It is my firm belief that Yoga is universally accessible,
+							catering to
+							individuals of all abilities. My sessions are grounded in the therapeutic principles of
+							Special Yoga, prioritizing the unique requirements of each participant.</p>
+						<p>As a Special Yoga instructor, I am deeply committed to
+							sharing the methodology and principles of Special Yoga with a diverse audience. The
+							primary focus of my practice lies in serving children and adults with disabilities and
+							special needs. Through tailored small group and one-on-one sessions, I operate within
+							specialised SEN schools, community centers, and private residences.</p>
+						<p>With extensive experience spanning various conditions including Down
+							syndrome, ASD, global delay, cerebral palsy, and arthritis, I am adept at adapting yoga
+							practices to meet the specific needs of each individual.</p>
+						<p>
+							Working from my heart and sharing my love of the special yoga practices is very important
 							to me, I have seen first-hand the impact of breath and body practices on my own daughter who
 							has Down syndrome and autism. More importantly I have learnt how my own state matters and
-							impacts on everything and everyone around me.”</blockquote>
+							impacts on everything and everyone around me.</p>
 						</p>
 						<p>
+
+
 						</p>
-						<h2>Karen’s additional skillset:</h2>
-						BSL level 1 & 2
-						Makaton
-						PEC’s
-						NAS Licensed
-						Earlybird trainer
-						Sleep practitioner
-						Portage Practitioner </p>
-						<ul class="actions">
-							<li><a href="#first" class="button">Learn More</a></li>
-						</ul>
+
 					</div>
 					<span class="image"><img src="images/karen.jpg" alt="" /></span>
 				</div>
@@ -81,13 +81,54 @@
 			<!-- First Section -->
 			<section id="first" class="main special">
 				<header class="major">
-					<h2>Classes</h2>
+					<h2>Accessible Yoga for Adults</h2>
 				</header>
+				<ul class="features">
+
+					<div class="paragraph-container left-paragraph">
+						<b>Fridays 11-15 - 12-15<br>
+							Zenw2 Studio<br>
+							12, Queen's Parade,<br>
+							Walm Lane,<br>
+							London Nw2 5HT<br>
+							<br>
+							<a
+								href="mailto:info@zenw2.co.uk?subject=Inquiry:%20Accessible%20Yoga%20for%20Adults">info@zenw2.co.uk</a>
+							<br></b>
+
+					</div>
+					<div class="paragraph-container right-paragraph">
+
+						<p>This is a grounded yoga session adapting postures, using props such as chairs,
+							blocks and
+							bolsters to support modified yoga postures adapted to the individual.
+						</p>
+						<p>
+							Using props such as blocks, bolsters, and chairs to make it possible for
+							everyone to participate. The class includes modified yoga poses, gentle
+							manipulation,
+							breathing techniques and of course, closes with some relaxation. Ensuring you
+							are well-supported to access the practice by modifying as necessary Perfect for
+							those who find it more difficult to access the floor/have injuries/are older and
+							looking for something extremely gentle and nourishing.to make the poses open to
+							more people,
+							and it recognises that poses aren't everything.
+						</p>
+
+
+					</div>
+				</ul>
+				<header class="major">
+					<h2>Bespoke Classes</h2>
+				</header>
+
 				<ul class="features">
 					<li>
 						<!--span class="icon solid major style1 fa-code"></span-->
 						<h3>Individuals</h3>
-						<p>One to one sessions are available please email for more information.</p>
+						<p>One to one sessions can be arranged to take place in the studio or in your own home.
+							Please contact me for further information.
+						</p>
 					</li>
 					<li>
 						<!--span class="icon major style3 fa-copy"></span-->
@@ -99,59 +140,18 @@
 					<li>
 						<!--span class="icon major style5 fa-gem"></span-->
 						<h3>Schools</h3>
-						<p>If your school is interested in bespoke training, please contact special yoga from this link
+						<p>If your school is interested in bespoke training, please contact Special Yoga.
+							<a href="https://specialyoga.co.uk" class="button">Learn More About Special Yoga</a>
 						</p>
 					</li>
 				</ul>
-				<footer class="major">
+				<!--footer class="major">
 					<ul class="actions special">
 						<li><a href="generic.html" class="button">Learn More</a></li>
 					</ul>
-				</footer>
+				</footer-->
 			</section>
 
-			<!-- Second Section -->
-			<section id="second" class="main special">
-				<header class="major">
-					<h2>Schools</h2>
-					<p>As well as working with individuals we also run classes for schools. CRB checked, Special Needs,
-						Adapt lessons to suit the needs of the school and children blah blah</p>
-				</header>
-				<ul class="statistics">
-					<li class="style1">
-						<span class="icon solid fa-code-branch"></span>
-						<strong>5,120</strong> Etiam
-					</li>
-					<li class="style2">
-						<span class="icon fa-folder-open"></span>
-						<strong>8,192</strong> Magna
-					</li>
-					<li class="style3">
-						<span class="icon solid fa-signal"></span>
-						<strong>2,048</strong> Tempus
-					</li>
-					<li class="style4">
-						<span class="icon solid fa-laptop"></span>
-						<strong>4,096</strong> Aliquam
-					</li>
-					<li class="style5">
-						<span class="icon fa-gem"></span>
-						<strong>1,024</strong> Nullam
-					</li>
-				</ul>
-				<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus
-					hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus.
-					Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed
-					eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur
-					vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis
-					porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam
-					porta. Cras eu ornare dui curabitur lacinia.</p>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
-				</footer>
-			</section>
 
 			<!-- Get Started -->
 			<section id="cta" class="main special">
@@ -159,9 +159,7 @@
 					<header class="major">
 						<h2>Special Yoga Practitioner</h2>
 						<p>
-							<span class="image left"><img
-									src="https://images.squarespace-cdn.com/content/v1/5c8a3f03809d8e33a4c87e45/1615305410604-R9XI5PAPBY0DLMQ2FV84/SY-badge.png?format=150w"
-									alt="" />
+							<span class="image left"><img src="images/SY-badge.png" alt="" />
 								<p class="content">
 									Karen is an accredited senior practitioner with special yoga. Special Yoga’s
 									methodology includes the classical yoga practices of movement, breath work and deep
@@ -170,39 +168,12 @@
 								</p>
 							</span>
 
-						</p>
 
-						<p>
-						<ul class="features">
-							<li>Special Yoga for Adults with Special Needs</li>
-						</ul>
-						<ul class="features">
-
-							<li>Special Yoga for Special Children Foundation</li>
-
-						</ul>
-						<ul class="features">
-
-							<li>Special Yoga for Special Children Senior Practitioner</li>
-						</ul>
-						<ul class="features">
-							<li>Autism</li>
-							<li>Cerebral Palsy</li>
-							<li>Down Syndrome</li>
-							<li>PMLD</li>
-						</ul>
-						<ul class="features">
-							<li>Children</li>
-							<li>One-to-One</li>
-							<li>Schools</li>
-							<li>Teens</li>
-							<li>Adults</li>
-						</ul>
-
-
-						</p>
 					</header>
+
 				</div>
+
+				</p>
 				<footer class="major">
 					<ul class="actions special">
 						<!--li><a href="generic.html" class="button primary">Get Started</a></li-->
@@ -216,23 +187,25 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<h2>Aliquam sed mauris</h2>
+				<!--h2>Aliquam sed mauris</h2>
 				<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam
 					dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat
 					egestas velit, vitae tincidunt odio.</p>
 				<ul class="actions">
 					<li><a href="generic.html" class="button">Learn More</a></li>
-				</ul>
+				</ul-->
 			</section>
 			<section>
-				<h2>Etiam feugiat</h2>
+				<h2>Contact me</h2>
 				<dl class="alt">
 					<!-- <dt>Address</dt>
 					<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
 					<dt>Phone</dt>
 					<dd>(000) 000-0000 x 0000</dd> -->
 					<dt>Email</dt>
-					<dd><a href="#">information@untitled.tld</a></dd>
+					<dd><a
+							href="mailto:karen@possibilityyoga.co.uk?Subject=Possibility%20Yoga">karen@possibilityyoga.co.uk</a>
+					</dd>
 				</dl>
 				<!-- <ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
