--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 						<p>Welcome to PossibilityYoga. It is my firm belief that Yoga is universally accessible,
 							catering to
 							individuals of all abilities. My sessions are grounded in the therapeutic principles of
-							Special Yoga, prioritizing the unique requirements of each participant.</p>
-						<p>As a Special Yoga instructor, I am deeply committed to
+							Special Yoga, prioritising the unique requirements of each participant.</p>
+						<p>As a Special Yoga teacher, I am deeply committed to
 							sharing the methodology and principles of Special Yoga with a diverse audience. The
 							primary focus of my practice lies in serving children and adults with disabilities and
 							special needs. Through tailored small group and one-on-one sessions, I operate within
@@ -109,8 +109,8 @@
 							manipulation,
 							breathing techniques and of course, closes with some relaxation. Ensuring you
 							are well-supported to access the practice by modifying as necessary Perfect for
-							those who find it more difficult to access the floor/have injuries/are older and
-							looking for something extremely gentle and nourishing.to make the poses open to
+							those who find it more difficult to access the floor, may have injuries or are older and
+							looking for something extremely gentle and nourishing, to make the poses open to
 							more people,
 							and it recognises that poses aren't everything.
 						</p>
@@ -140,7 +140,7 @@
 					<li>
 						<!--span class="icon major style5 fa-gem"></span-->
 						<h3>Schools</h3>
-						<p>If your school is interested in bespoke training, please contact Special Yoga.
+						<p>If your school is interested in bespoke training, for your staff. please contact Special Yoga.
 							<a href="https://specialyoga.co.uk" class="button">Learn More About Special Yoga</a>
 						</p>
 					</li>
@@ -161,7 +161,7 @@
 						<p>
 							<span class="image left"><img src="images/SY-badge.png" alt="" />
 								<p class="content">
-									Karen is an accredited senior practitioner with special yoga. Special Yoga’s
+									Karen is an accredited senior practitioner and trainer with special yoga. Special Yoga’s
 									methodology includes the classical yoga practices of movement, breath work and deep
 									relaxation combined with mindfulness, sound, rhythm, massage and sensory integration
 									techniques.
