--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 							special needs. Through tailored small group and one-on-one sessions, I operate within
 							specialised SEN schools, community centers, and private residences.</p>
 						<p>With extensive experience spanning various conditions including Down
-							syndrome, ASD, global delay, cerebral palsy, and arth	ritis, I am adept at adapting yoga
-							practices to meet the specific needs of each individual using tools and echniques such as 
+							syndrome, ASD, global delay, cerebral palsy, and arthritis, I am adept at adapting yoga
+							practices to meet the specific needs of each individual using tools and echniques such as
 							Makaton, British Sign Language, PECS and TEACCH for chidren and adults with autism</p>
 						<p>
 							Working from my heart and sharing my love of the special yoga practices is very important
@@ -70,10 +70,10 @@
 							impacts on everything and everyone around me.</p>
 						</p>
 						<p>
-							 
+
 							<dd><b>Contact me:&nbsp;<a
-								href="mailto:karen@possibilityyoga.co.uk?Subject=Possibility%20Yoga">karen@possibilityyoga.co.uk</a></b>
-						</dd>
+										href="mailto:karen@possibilityyoga.co.uk?Subject=Possibility%20Yoga">karen@possibilityyoga.co.uk</a></b>
+							</dd>
 
 						</p>
 
@@ -81,7 +81,7 @@
 					<span class="image"><img src="images/karen.jpg" alt="" /></span>
 				</div>
 			</section>
-			
+
 			<!-- First Section -->
 			<section id="first" class="main special">
 				<header class="major">
@@ -122,7 +122,7 @@
 
 					</div>
 				</ul>
-				
+
 				<header class="major">
 					<h2>Bespoke Classes</h2>
 				</header>
@@ -145,7 +145,8 @@
 					<li>
 						<!--span class="icon major style5 fa-gem"></span-->
 						<h3>Schools</h3>
-						<p>If your school is interested in bespoke training, for your staff. please contact Special Yoga.
+						<p>If your school is interested in bespoke training, for your staff. please contact Special
+							Yoga.
 							<a href="https://specialyoga.co.uk" class="button">Learn More About Special Yoga</a>
 						</p>
 					</li>
@@ -166,13 +167,15 @@
 						<p>
 							<span class="image left"><img src="images/SY-badge.png" alt="" />
 								<p class="content">
-									Karen is an accredited senior practitioner and trainer with special yoga. Special Yoga’s
+									Karen is an accredited senior practitioner and trainer with special yoga. Special
+									Yoga’s
 									methodology includes the classical yoga practices of movement, breath work and deep
 									relaxation combined with mindfulness, sound, rhythm, massage and sensory integration
 									techniques.
 								</p>
 								<p>
-									<i><b>Special Yoga: Supporting Children with Special and Additional Needs to Achieve their True Potential and Purpose</b></i>
+									<i><b>Special Yoga: Supporting Children with Special and Additional Needs to Achieve
+											their True Potential and Purpose</b></i>
 								</p>
 							</span>
 
@@ -190,11 +193,12 @@
 					<h2>Further Information</h2>
 				</header>
 				<p>
-					If you are a parent or carer and are looking for information or where to go for additional support please see the links below
+					If you are a parent or carer and are looking for information or where to go for additional support
+					please see the links below
 				</p>
 				<ul class="actions special">
 					<!--li><a href="generic.html" class="button primary">Get Started</a></li-->
-					<li><a href="https://www.Kids.org.uk k" class="button">Kids</a></li>
+					<li><a href="https://www.kids.org.uk" class="button">Kids</a></li>
 					<li><a href="https://www.ipsea.org.uk/" class="button">SEND Law</a></li>
 					<li><a href="https://www.specialneedsjungle.com/" class="button">Special Needs Jungle</a></li>
 				</ul>
