Typo Remove Fridays

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							specialised SEN schools, community centers, and private residences.</p>
 						<p>With extensive experience spanning various conditions including Down
 							syndrome, ASD, global delay, cerebral palsy, and arthritis, I am adept at adapting yoga
-							practices to meet the specific needs of each individual using tools and echniques such as
+							practices to meet the specific needs of each individual using tools and techniques such as
 							Makaton, British Sign Language, PECS and TEACCH for chidren and adults with autism</p>
 						<p>
 							Working from my heart and sharing my love of the special yoga practices is very important
@@ -89,7 +89,7 @@
 				</header>
 				<ul class="features">
 
-					<div class="paragraph-container left-paragraph">
+					<!--div class="paragraph-container left-paragraph">
 						<b>Fridays 11-15 - 12-15<br>
 							Zenw2 Studio<br>
 							12, Queen's Parade,<br>
@@ -100,7 +100,7 @@
 								href="mailto:info@zenw2.co.uk?subject=Inquiry:%20Accessible%20Yoga%20for%20Adults">info@zenw2.co.uk</a>
 							<br></b>
 
-					</div>
+				</div-->
 					<div class="paragraph-container right-paragraph">
 
 						<p>This is a grounded yoga session adapting postures, using props such as chairs,
